@@ -1,6 +1,35 @@
 # COVID-19 Tracker - RitoruX
 **Covid-19 Tracker** is a java application that tracks and shows graphs **COVID-19** infected , deaths and recovered for each day.
-##Features
+
+**Homepage**
+
+![Imgur](https://imgur.com/KHH4Iwd.png)
+
+**More Info page**
+
+![Imgur](https://imgur.com/wM71Nme.png)
+## Features
 * Showing Covid-19 infected, death and recovery stats for each country around the world.
 * Showing graph stats for each country.
-##Usage
+## How to run it
+ 1. First step, clone my project to your device.
+ 2. Command Line to project directory, then use command by change  ```--module-path ``` to your device directory.
+ ``` 
+ java --module-path "{CovidTracker\lib\directory\here}" --add-modules javafx.controls,javafx.fxml,javafx.graphics,com.fasterxml.jackson.annotation,com.fasterxml.jackson.core,com.fasterxml.jackson.databind  -jar CovidTracker.jar 
+```
+## Technology Used
+* [Jackson library](https://github.com/FasterXML/jackson) : mapping JSON string to another form that is easier to use.
+* JavaFX + CSS : more clearly preference
+* Scene Builder : easier to create UI
+## Design Pattern
+* Singleton Pattern
+## Educational Value
+* Using data from API.
+* Using Java libraries from Maven to make work done easier.
+* Using JavaFX elements.
+* Using Scene builder library from the internet.
+* Using Design Patterns to make systematic work.
+* CSS Designing.
+## UML Diagram
+![Imgur](https://imgur.com/nVEQu3o.png)
+
